--- a/.github/workflows/prebuilt.yml
+++ b/.github/workflows/prebuilt.yml
@@ -7,7 +7,15 @@ on:
         description: macOS SDK Version
         type: choice
         options:
-          - 10.9
+          - 10.1.5
+          - 10.2.8
+          - 10.3.0
+          - 10.3.9
+          - 10.4u
+          - 10.5
+          - 10.6
+          - 10.7
+          - 10.8
           - 10.10
           - 10.11
           - 10.12
@@ -15,7 +23,7 @@ on:
           - 10.14
           - 10.15
           - 11.1
-          - 11.13
+          - 11.3
           - 12.0
           - 12.1
           - 12.3
@@ -33,7 +41,11 @@ on:
           - 15.5
           - 26.0
           - 26.1
+          - 26.2
         default: 10.13
+env:
+  sdk_dl_url: https://github.com/gfunkmonk/macOS-SDK/releases/download/v1.0/MacOSX${{
+    inputs.version }}.sdk.tar.xz
 jobs:
   build-linux-x86-64:
     runs-on: ubuntu-latest
@@ -42,21 +54,16 @@ jobs:
         uses: actions/checkout@v6
       - name: download SDK
         run: |
-          # Try tar.xz first, fall back to tar.bz2 if not found
-          if ! wget -P tarballs https://github.com/joseluisq/macosx-sdks/releases/download/${{ inputs.version }}/MacOSX${{ inputs.version }}.sdk.tar.xz; then
-            echo "tar.xz not found, trying tar.bz2..."
-            wget -P tarballs https://github.com/joseluisq/macosx-sdks/releases/download/${{ inputs.version }}/MacOSX${{ inputs.version }}.sdk.tar.bz2
-          fi
+          wget -P tarballs ${{ env.sdk_dl_url }}
       - name: build osxcross
         run: |
-          UNATTENDED=1 TARGET_DIR=${{ github.workspace }}/osxcross ./build.sh         
+          UNATTENDED=1 TARGET_DIR=${{ github.workspace }}/osxcross ./build.sh
       - name: archive osxcross
         run: |
-          tar -cvf osxcross.tar osxcross
-          xz -9 osxcross.tar          
+          tar -cvf osxcross-${{ inputs.version }}.tar osxcross
+          xz -9 osxcross-${{ inputs.version }}.tar
       - name: upload artifact
         uses: actions/upload-artifact@v6
         with:
           name: osxcross-linux-x86-64
-          path: osxcross.tar.xz
-          compression-level: 0
+          path: osxcross-${{ inputs.version }}.tar.xz
