--- a/.github/workflows/prebuilt.yml
+++ b/.github/workflows/prebuilt.yml
@@ -38,7 +38,8 @@ on:
           - 26.2
         default: 10.13
 env:
-  sdk_dl_url: https://github.com/gfunkmonk/macOS-SDK/releases/download/v1.0/MacOSX${{
+  sdk_dl_url: >-
+    https://github.com/gfunkmonk/macOS-SDK/releases/download/v1.0/MacOSX${{
     inputs.version }}.sdk.tar.xz
 jobs:
   build-linux-x86-64:
@@ -60,4 +61,3 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: osxcross-linux-x86-64-${{ inputs.version }}
-          path: osxcross-${{ inputs.version }}.tar.xz
