--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,10 @@
+---
 name: Release osxcross
 
 on: workflow_dispatch
-
 jobs:
   package_sdks:
     uses: ./.github/workflows/sdk.yml
-
   build_apple_clang:
     name: Build Apple Clang
     strategy:
@@ -21,7 +20,6 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v6
-
       - name: Create Apple Clang build script
         run: |
           cat > build_apple_clang_script.sh << 'EOF'
@@ -58,7 +56,8 @@ jobs:
           mkdir -p /cmake
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.8/cmake-3.31.8-linux-x86_64.tar.gz | tar -xz -C /cmake --strip-components=1
-          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
+          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ];
+          then
             curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.8/cmake-3.31.8-linux-aarch64.tar.gz | tar -xz -C /cmake --strip-components=1
           else
             echo "Unsupported architecture: $(uname -m)"
@@ -68,12 +67,14 @@ jobs:
           # Build Apple Clang
           export INSTALLPREFIX=/usr/local/apple-clang
           export CLANG_VERSION=21
-          UNATTENDED=1 ENABLE_CLANG_INSTALL=1 PORTABLE=1 JOBS=$(nproc) bash build_apple_clang.sh
+          UNATTENDED=1 ENABLE_CLANG_INSTALL=1 PORTABLE=1 JOBS=$(nproc) bash
+          build_apple_clang.sh
           # Create distribution package
           mkdir -p dist
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             tar -zcf dist/apple-clang-21-linux-x86_64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
-          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
+          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ];
+          then
             tar -zcf dist/apple-clang-21-linux-aarch64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
           else
             echo "Unsupported architecture: $(uname -m)"
@@ -91,9 +92,10 @@ jobs:
       - name: Upload Apple Clang artifact
         uses: actions/upload-artifact@v6
         with:
-          name: apple-clang-${{ matrix.ubuntu_version }}-${{ matrix.runs-on == 'ubuntu-24.04-arm' && 'aarch64' || 'x86_64' }}
+          name: >-
+            apple-clang-${{ matrix.ubuntu_version }}-${{ matrix.runs-on ==
+            'ubuntu-24.04-arm' && 'aarch64' || 'x86_64' }}
           path: dist/*
-
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
@@ -109,7 +111,6 @@ jobs:
     needs: package_sdks
     steps:
       - uses: actions/checkout@v6
-
       - name: Clear tarballs
         run: |
           rm -rf tarballs/* || true
@@ -149,19 +150,18 @@ jobs:
       - build_apple_clang
     steps:
       - uses: actions/checkout@v6
-
       - name: Download SDK
         uses: actions/download-artifact@v4
         with:
           name: ${{ matrix.sdk_versions }}
           path: tarballs
-
       - name: Download Apple Clang
         uses: actions/download-artifact@v4
         with:
-          name: apple-clang-${{ matrix.ubuntu_version }}-${{ matrix.runs-on == 'ubuntu-24.04-arm' && 'aarch64' || 'x86_64' }}
+          name: >-
+            apple-clang-${{ matrix.ubuntu_version }}-${{ matrix.runs-on ==
+            'ubuntu-24.04-arm' && 'aarch64' || 'x86_64' }}
           path: apple-clang
-
       - name: Create build script
         run: |
           cat > build_script.sh << 'EOF'
@@ -204,7 +204,8 @@ jobs:
           mkdir -p /cmake
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.8/cmake-3.31.8-linux-x86_64.tar.gz | tar -xz -C /cmake --strip-components=1
-          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
+          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ];
+          then
             curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.8/cmake-3.31.8-linux-aarch64.tar.gz | tar -xz -C /cmake --strip-components=1
           else
             echo "Unsupported architecture: $(uname -m)"
@@ -213,12 +214,14 @@ jobs:
           export PATH=/cmake/bin:$PATH
           # Build osxcross
           export IPHONEOS_DEPLOYMENT_TARGET=5.0
-          UNATTENDED=1 SDK_VERSION="$(echo $2 | sed 's/-/./g')" JOBS=$(nproc) bash build.sh
+          UNATTENDED=1 SDK_VERSION="$(echo $2 | sed 's/-/./g')" JOBS=$(nproc)
+          bash build.sh
           # Create distribution package
           mkdir -p dist
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             tar -zcf dist/osxcross-$2-linux-x86_64-gnu-ubuntu-$1.tar.gz -C $TARGET_DIR .
-          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
+          elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ];
+          then
             tar -zcf dist/osxcross-$2-linux-aarch64-gnu-ubuntu-$1.tar.gz -C $TARGET_DIR .
           else
             echo "Unsupported architecture: $(uname -m)"
@@ -241,4 +244,3 @@ jobs:
           append_body: false
           fail_on_unmatched_files: true
           files: |
-            dist/*
