--- a/.github/workflows/validate-workflow-files.yml
+++ b/.github/workflows/validate-workflow-files.yml
@@ -1,19 +1,18 @@
+---
 name: Validate Workflows
 on:
   push:
     branches:
-      - "*"
+      - '*'
   pull_request:
     branches:
-      - "*"
-
+      - '*'
 jobs:
   lint-yaml:
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
-        uses: actions/checkout@v4 # Use actions/checkout@v4 or newer
+        uses: actions/checkout@v4
       - name: Validate YAML
         uses: ibiqlik/action-yamllint@v3
         with:
-          format: github # Enables GitHub annotations directly on lines with issue
