--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,9 +73,7 @@ jobs:
           export PATH=/cmake/bin:$PATH
           # Build Apple Clang
           export INSTALLPREFIX=/usr/local/apple-clang
-          export CLANG_VERSION=21
-          UNATTENDED=1 ENABLE_CLANG_INSTALL=1 PORTABLE=1 JOBS=$(nproc) bash
-          build_apple_clang.sh
+          export CLANG_VERSION=21 UNATTENDED=1 ENABLE_CLANG_INSTALL=1 PORTABLE=1 JOBS=$(nproc) bash build_apple_clang.sh
           # Create distribution package
           mkdir -p dist
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
@@ -220,9 +218,7 @@ jobs:
           fi
           export PATH=/cmake/bin:$PATH
           # Build osxcross
-          export IPHONEOS_DEPLOYMENT_TARGET=5.0
-          UNATTENDED=1 SDK_VERSION="$(echo $2 | sed 's/-/./g')" JOBS=$(nproc)
-          bash build.sh
+          export IPHONEOS_DEPLOYMENT_TARGET=5.0 UNATTENDED=1 SDK_VERSION="$(echo $2 | sed 's/-/./g')" JOBS=$(nproc) bash build.sh
           # Create distribution package
           mkdir -p dist
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
