--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -213,7 +213,8 @@ jobs:
           fi
           export PATH=/cmake/bin:$PATH
           # Build osxcross
-          export IPHONEOS_DEPLOYMENT_TARGET=5.0
+          export IPHONEOS_DEPLOYMENT_TARGET="5.0"
+
           UNATTENDED=1 SDK_VERSION="$(echo $2 | sed 's/-/./g')" JOBS=$(nproc) bash ./build.sh
           # Create distribution package
           mkdir -p dist
