--- a/.github/workflows/prebuilt.yml
+++ b/.github/workflows/prebuilt.yml
@@ -49,6 +49,43 @@ jobs:
       - name: download SDK
         run: |
           wget -P tarballs ${{ env.sdk_dl_url }}
+      - name: Setup ccache
+        run: |
+          echo "CCACHE_NLEVELS=4" >> $GITHUB_ENV
+          # Link Compilers to /usr/bin/ccache
+          sudo ln -s /usr/bin/ccache /usr/local/bin/gcc
+          sudo ln -s /usr/bin/ccache /usr/local/bin/g++
+          sudo ln -s /usr/bin/ccache /usr/local/bin/clang
+          sudo ln -s /usr/bin/ccache /usr/local/bin/clang++
+          sudo ln -s /usr/bin/ccache /usr/local/bin/cpp
+          sudo ln -s /usr/bin/ccache /usr/local/bin/c++
+          sudo ln -s /usr/bin/ccache /usr/local/bin/cc
+          # Setup CCACHE Dir
+          sudo mkdir -p /mnt/ccache
+          sudo chown -R $USER:$USER /mnt/ccache
+          echo "CCACHE_DIR=/mnt/ccache" >> $GITHUB_ENV
+          echo "CCACHE Dir Set!"
+          df -h
+          echo "CCACHE Environment set!"
+      - name: Enable ccache
+        uses: Chocobo1/setup-ccache-action@v1
+        with:
+          update_packager_index: true
+          install_ccache: true
+          prepend_symlinks_to_path: true
+          ccache_options: |
+            max_size=10000M
+            compression=true
+            compression_level=6
+            hash_dir=false
+            sloppiness=file_macro,locale,time_macros
+            file_clone=true
+            hard_link=false
+            inode_cache=true
+            recache=false
+            direct_mode=true
+            depend_mode=true
+            compiler_check=content
       - name: build osxcross
         run: |
           UNATTENDED=1 TARGET_DIR=${{ github.workspace }}/osxcross ./build.sh
