--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,7 +152,7 @@ jobs:
             --env PATH="/usr/lib/ccache:$PATH" \
             --workdir /osxcross \
             ubuntu:${{ matrix.ubuntu_version }} \
-            ccache -s && /bin/bash -c "/osxcross/build_apple_clang_script.sh '${{ matrix.ubuntu_version }}'"
+            /bin/bash -c "/osxcross/build_apple_clang_script.sh '${{ matrix.ubuntu_version }}'"
       - name: Save Apple Clang build cache
         uses: actions/cache/save@v4
         if: always() && steps.cache-apple-clang.outputs.cache-hit != 'true'
@@ -312,7 +312,7 @@ jobs:
             --env PATH="/usr/lib/ccache:$PATH" \
             --workdir /osxcross \
             ubuntu:${{ matrix.ubuntu_version }} \
-            ccache -s && /bin/bash -c "/osxcross/build_script.sh '${{ matrix.ubuntu_version }}' '${{ matrix.sdk_versions }}'"
+            /bin/bash -c "/osxcross/build_script.sh '${{ matrix.ubuntu_version }}' '${{ matrix.sdk_versions }}'"
       - name: Save osxcross build cache
         uses: actions/cache/save@v4
         if: always() && steps.cache-osxcross.outputs.cache-hit != 'true'
