--- a/.github/workflows/release-1.yml
+++ b/.github/workflows/release-1.yml
@@ -128,7 +128,7 @@ jobs:
           echo "Architecture: $(uname -m)"
           # Update package list and install dependencies
           export DEBIAN_FRONTEND=noninteractive
-          apt-get update && apt-get install -y \
+          sudo apt-get update && apt-get install -y \
             curl \
             wget \
             make \
@@ -154,7 +154,7 @@ jobs:
             ninja-build \
             ccache
           # Download and install CMake
-          mkdir -p /cmake
+          sudo mkdir -p /cmake
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.10/cmake-3.31.10-linux-x86_64.tar.gz | tar -xz -C /cmake --strip-components=1
           elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
@@ -170,7 +170,7 @@ jobs:
 
           UNATTENDED=1 ENABLE_CLANG_INSTALL=1 PORTABLE=1 JOBS=$(nproc) bash ./build_apple_clang.sh
           # Create distribution package
-          mkdir -p dist
+          sudo mkdir -p dist
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             tar -zcf dist/apple-clang-21-linux-x86_64-gnu-ubuntu-$1.tar.gz -C $INSTALLPREFIX .
           elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
@@ -263,7 +263,7 @@ jobs:
           echo "Architecture: $(uname -m)"
           # Update package list and install dependencies
           export DEBIAN_FRONTEND=noninteractive
-          apt-get update && apt-get install -y \
+          sudo apt-get update && apt-get install -y \
             curl \
             wget \
             make \
@@ -290,12 +290,12 @@ jobs:
             ccache
           export TARGET_DIR=/usr/local/osxcross
           CLANG_DIR=$TARGET_DIR/clang
-          mkdir -p $CLANG_DIR
+          sudo mkdir -p $CLANG_DIR
           # Extract and setup Apple Clang
           tar -xzf /osxcross/apple-clang/*.tar.gz -C $CLANG_DIR
           export PATH=$CLANG_DIR/bin:$PATH
           # Download and install CMake
-          mkdir -p /cmake
+          sudo mkdir -p /cmake
           if [ "$(uname -m)" = "x86_64" ] || [ "$(uname -m)" = "amd64" ]; then
             curl -sSL https://github.com/Kitware/CMake/releases/download/v3.31.10/cmake-3.31.10-linux-x86_64.tar.gz | tar -xz -C /cmake --strip-components=1
           elif [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "arm64" ]; then
